# KGTorrent

./: .env  pyproject.toml  shell.nix
KGTorrent/: cloud_storage.py  config.py  data_loader.py  db_communication_handler.py  downloader.py  kgtorrent.py  mk_preprocessor.py
data/: fk_constraints_data.csv
